[project]
name = "Chamber"
dynamic = ["version"]
authors = [
  { name="Christopher Gill", email="chris@chrisgill.net" },
]
description = "Chamber - Current Congressional Status"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "feedparser",
    'tzdata',
    'paho-mqtt'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]

[project.urls]
Homepage = "https://github.com/chrisgilldc/chamber"
Issues = "https://github.com/chrisgilldc/chamber/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "chamber/version.py"

[project.scripts]
chambers = "chambers.daemon"